syntax = "proto3";

option go_package = "github.com/cemayan/searchengine/protos/backendreq";

package backendreq;


service DbService {
  // Sends a greeting
  rpc SendRequest (BackendRequest) returns (BackendRequest) {}
}

message BackendRequestItem {

  string title = 2;
  string url = 3;
}


// The request message containing the user's name.
message BackendRequest {
  string key = 2;
  repeated BackendRequestItem items = 3;
}

